# GanTTY

./: README.md  pyproject.toml
example/: demo_data
src/gantty/: gantt.py  keys.py  main.py  ui.py
